config/objects/Quote_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <picklist>
            <picklistValues>
                <fullName>MILES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETENTION MINUTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALLET SPOTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POUNDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEIGHT PER PALLET SPOTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTS PER FUEL GALLON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLATION HOURS NOTICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERMODAL ALLOWED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSOLIDATION ALLOWED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEAM SERVICE REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFRIGERATION REQUIRED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Conditions</relationshipLabel>
        <relationshipName>Quote_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rate Condition</label>
    <nameField>
        <displayFormat>QC-{000000000}</displayFormat>
        <label>Quote Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>